further changes to ensure contrast on links inside nav mobile version

--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+    color: rgba(0, 0, 0, .6) !important;
 }
 
 .d-bloc .panel .a-btn:hover,
